# TurkishLLM-Eval

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  requirements.txt  sample_results.json
configs/: default.yaml  full_eval.yaml  quick_eval.yaml
data/bias_tr/: metadata.json  questions.jsonl
data/hallucination_tr/: metadata.json  questions.jsonl
data/mmlu_tr/: metadata.json  questions.jsonl
data/truthfulqa_tr/: metadata.json  questions.jsonl
docs/: ADDING_BENCHMARKS.md  ADDING_MODELS.md  BIAS_TAXONOMY.md  METHODOLOGY.md
scripts/: generate_report.py  run_eval.py  submit_to_leaderboard.py
tests/: test_benchmarks.py  test_metrics.py  test_preprocessor.py
turkishllm_eval/: __init__.py  config.py  pipeline.py
turkishllm_eval/benchmarks/: __init__.py  base.py  bias_detection.py  hallucination.py  mmlu_tr.py  truthfulqa_tr.py
turkishllm_eval/data/: __init__.py  loader.py  preprocessor.py
turkishllm_eval/judges/: __init__.py  base.py  claude_judge.py  ensemble.py  gpt4_judge.py  rubrics.py
turkishllm_eval/metrics/: __init__.py  accuracy.py  agreement.py  bias_score.py  composite.py  hallucination_score.py
turkishllm_eval/models/: __init__.py  base.py  huggingface_model.py  ollama_model.py  openai_model.py  vllm_model.py
turkishllm_eval/utils/: __init__.py  export.py  logger.py  rate_limiter.py
